[package]
name = "speed-blockchain"
version = "0.1.0"
edition = "2024"

[dependencies]
rocksdb = "0.21"
anyhow = "1.0.99"
# For hex encoding/decoding (converting hash bytes to readable strings)
hex = "0.4.3"
# random number generation
rand = "0.8"
rand_chacha = "0.9.0"
rand_core = "0.9.3"

# async runtime
tokio = { version = "1.45.1", features = ["full"] }
tokio-util = "0.7"                                  # Additional utilities
chrono = { version = "0.4", features = ["serde"] }  # For timestamps

jsonrpsee = { version = "0.26.0", features = ["macros", "server"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rlp = "0.6.1"
rlp-derive = "0.2.0"

# ethereum
alloy = { version = "1.0.25", features = ["std", "rlp", "serde"] }
alloy-signer = "1.0.25"
alloy-signer-local = "1.0.25"

# for better logging
tracing = "0.1"
tracing-subscriber = "0.3"

# error handling
thiserror = "2.0"

[dev-dependencies]
# Testing dependencies
tokio-test = "0.4"
tempfile = "3.8"
proptest = "1.4"
serial_test = "3.0"
anyhow = "1.0.99"
